--- a/src/ui/files/components/Breadcrumb.scss
+++ b/src/ui/files/components/Breadcrumb.scss
@@ -10,6 +10,7 @@
   .breadcrumb-entry {
     align-items: center;
     display: flex;
+    min-width: 3em;
     overflow: hidden;
 
     .material-icons {
